# blocklists

./: LICENSE  README.md  pyproject.toml
.github/workflows/: fetch-and-regenerate-lists.yml  pylint.yml
by-format/adblock/: wikifarms-by-indie-wiki.txt  wikifarms-by-wiki-gg.txt  wikifarms.all.txt
by-format/dnsmasq/: wikifarms-by-indie-wiki.txt  wikifarms-by-wiki-gg.txt  wikifarms.all.txt
by-format/hostsetc/: wikifarms-by-indie-wiki.txt  wikifarms-by-wiki-gg.txt  wikifarms.all.txt
by-format/hostsip4/: wikifarms-by-indie-wiki.txt  wikifarms-by-wiki-gg.txt  wikifarms.all.txt
logs/: import_from_indie_wiki.changes.json  import_from_indie_wiki.sites.json
scripts/: generate_blocklists.py  helper.py  import_from_indie_wiki.py  import_from_wiki_gg.py
sources/: import_from_indie_wiki.sitesca.txt  import_from_indie_wiki.sitesde.txt  import_from_indie_wiki.sitesen.txt  import_from_indie_wiki.siteses.txt  import_from_indie_wiki.sitesfi.txt  import_from_indie_wiki.sitesfr.txt  import_from_indie_wiki.siteshr.txt  import_from_indie_wiki.siteshu.txt  import_from_indie_wiki.sitesit.txt  import_from_indie_wiki.sitesja.txt  import_from_indie_wiki.sitesko.txt  import_from_indie_wiki.siteslzh.txt  import_from_indie_wiki.sitesnl.txt  import_from_indie_wiki.sitespl.txt  import_from_indie_wiki.sitespt.txt  import_from_indie_wiki.sitesru.txt  import_from_indie_wiki.sitessv.txt  import_from_indie_wiki.sitesth.txt  import_from_indie_wiki.sitestok.txt  import_from_indie_wiki.sitestr.txt  import_from_indie_wiki.sitesuk.txt  import_from_indie_wiki.siteszh.txt  import_from_wiki_gg.txt
(+10 files in other folders)
