[project]
name = "TMW Blocklists"
version = "2026.1.0"
requires-python = ">= 3.11"
description = "Fetch unwanted sites and/or generate blocklists in various formats."
keywords = ["blacklist", "blocklist", "hosts", "adblock"]
authors = [
  {name = "codeshell", email = ""}
]
maintainers = [
  {name = "codeshell", email = ""}
]
readme = "README.md"
license-files = ["LICEN[CS]E*", "vendored/licenses/*.txt", "AUTHORS.md"]

[tool.pylint]
# https://github.com/pylint-dev/pylint/blob/main/examples/pyproject.toml
basic.docstring-min-length = -1
format.max-line-length = 120
# Specify a score threshold under which the program will exit with error.
main.fail-under = 9.5
# Return non-zero exit code if any of these messages/categories are detected (csv)
main.fail-on = ["F", "E"]

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120
